# drone-cv

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
drone_cv/: cam_check.py  drone_vision.py
sandbox/: drone_vision.py
src/vision/: recorder.py
