[tool.poetry]
name = "drone-cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
opencv-python = "^4.12.0.88"
numpy = "^2.2.0"
ultralytics = "^8.3.214"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
